src/index.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700;900&family=Roboto:wght@300;800&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind variants;

@layer base {
  :root {
    font-size: 16px;
    line-height: 24px;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;

    --surface-1: 254 251 255;
    --surface-2: 239 238 248;
    --surface-3: 233 233 246;
    --surface-4: 231 232 245;
    --surface-5: 227 228 244;

    --neutral-100: 255 255 255;
    --neutral-99: 254 251 255;
    --neutral-95: 242 240 244;
    --neutral-90: 228 225 230;
    --neutral-80: 200 198 202;
    --neutral-70: 172 170 175;
    --neutral-60: 145 144 148;
    --neutral-50: 119 118 122;
    --neutral-40: 94 94 98;
    --neutral-30: 71 70 74;
    --neutral-20: 48 48 52;
    --neutral-10: 27 27 31;
    --neutral-0: 0 0 0;

    --back: 241 241 241;
    --main: 32 32 32;

    color-scheme: light dark;
    color: rgb(var(--main));
    background-color: rgb(var(--surface-2));
  }

  a {
    text-decoration: inherit;
  }

  body {
    margin: 0;
    min-width: 320px;
    min-height: 100vh;
    font-family: 'DM Sans', 'Roboto', Helvetica, Arial, sans-serif;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  label {
    @apply font-bold font-title;
  }

  h1 {
    @apply text-3xl md:text-5xl leading-relaxed;
  }

  h2 {
    @apply text-xl font-bold mb-4;
  }

  h3 {
    @apply text-lg font-bold;
  }

  input,
  textarea,
  select {
    @apply bg-surface-2 shadow-inner px-4 py-2 text-lg rounded-lg
    outline outline-surface-5 hover:bg-surface-1 transition-colors
    focus:bg-surface-1;
  }

  /* Toggle Button */
  input[type='checkbox'] {
    -webkit-appearance: none;
    -webkit-tap-highlight-color: transparent;
    @apply relative border-0 outline-0 cursor-pointer
    transform w-12 h-6 isolate;
  }

  /* To create surface of toggle button */
  input[type='checkbox']:after {
    content: '';
    @apply w-full h-full inline-block bg-slate-400
    rounded-full clear-both absolute top-0 left-0;
  }

  /* Contents before checkbox to create toggle handle */
  input[type='checkbox']:before {
    content: '';
    @apply w-6 h-6 block absolute left-0 top-1/2 -translate-y-1/2
    rounded-full bg-surface-5 shadow-md transition-all z-10;
  }

  /* Shift the handle to left on check event */
  input[type='checkbox']:checked:before {
    @apply left-full -translate-x-full bg-emerald-500;
  }
  /* Background color when toggle button will be active */
  input[type='checkbox']:checked:after {
    @apply bg-emerald-200;
  }
}

@layer components {
  @media (prefers-color-scheme: dark) {
    :root {
      --surface-1: 27 27 31;
      --surface-2: 39 41 49;
      --surface-3: 44 46 56;
      --surface-4: 46 47 58;
      --surface-5: 49 51 62;

      --neutral-100: 255 255 255;
      --neutral-99: 254 251 255;
      --neutral-95: 242 240 244;
      --neutral-90: 228 225 230;
      --neutral-80: 200 198 202;
      --neutral-70: 172 170 175;
      --neutral-60: 145 144 148;
      --neutral-50: 119 118 122;
      --neutral-40: 94 94 98;
      --neutral-30: 71 70 74;
      --neutral-20: 48 48 52;
      --neutral-10: 27 27 31;
      --neutral-0: 0 0 0;

      --back: 32 32 32;
      --main: 241 241 241;
    }
  }
}

